update mod.conf info

--- a/mod.conf
+++ b/mod.conf
@@ -1,1 +1,4 @@
 name = cblocks
+depends = default
+optional_depends = lucky_block, stairs, moreblocks
+description = Adds coloured wood, glass and stone blocks.
