change wood and stonebrick placement to be same as minetest_game, use screwdriver to rotate

--- a/mod.conf
+++ b/mod.conf
@@ -1,4 +1,5 @@
 name = cblocks
+description = Adds coloured wood, glass and stone blocks.
 depends = default
 optional_depends = lucky_block, stairs, moreblocks
-description = Adds coloured wood, glass and stone blocks.
+min_minetest_version = 5.0
